# QPM-SEM-VI

./: .gitignore  README.md  pyproject.toml  ttt2.MD
.agents/: context-sync.md  human_in_the_loop.md  implementation-log.md
.github/: copilot-instructions.md
.github/docs/: copilot-instructions.md  reference-notes-README.md
.github/prompts/: exam-notes.prompt.md
UNIT 1/A Overview of Portfolio Management/: Q & A.docx
UNIT 2/: 3 CML & SML.docx  7 Global Minimum Variance Portfolio.docx  8 Maximum Sharpe Ratio_Tangency Portfolio.docx  UNIT 2.docx
UNIT 3/: Unit 3.docx
UNIT 3/PART 1 Modelling Asset Returns/: GBM_Real_Life_Example.docx
UNIT 3/PART 2 Simulation Approaches/: 2 Generating price paths_.docx  5 Difference Between Scenario Analysis and Monte Carlo Simulation.docx
UNIT 6/: 1 Portfolio revision.ppt  2 Sharpe, Treynor and Jensen.docx
docs/: REPO_STRUCTURE.md  WORKFLOWS.md
docs/resources/: figure_appendix.md
exam-notes-generator-skill/: README.md  package.json
extracted/: build_complete_study_source.py  extract_unit456.py  unit456_digest.md  unit456_extraction.json  unit456_extraction.md
files/: SKILL.md  exam-notes-skill.skill  ocr-strategy.md  soffice-convert.md
integrations/: __init__.py
outputs/: term-test-ii-units-4-6-complete-study-source.aux  term-test-ii-units-4-6-complete-study-source.md  term-test-ii-units-4-6-complete-study-source.tex  term-test-ii-units-4-6-exam-notes.md
outputs/extracted/: module1.json  module2.json  module3.json  module4.json  module5.json
qpm_notes/: __init__.py  paths.py  workflow.py
(+83 files in other folders)
