[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qpm-notes"
version = "0.1.0"
description = "QPM note-generation skill package"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["qpm_notes*"]
